# ROS2-practice

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/fibonacci_rclpy_action_pkg/lib/fibonacci_rclpy_action_pkg/: fibonacci_action_client  (+1 more)
install/final_project/share/final_project/: package.bash  package.ps1  package.sh  package.xml  package.zsh
launch/: turtlesim_mimic_launch.py
log/: latest_build  latest_list
src/fibonacci_rclpy_action_pkg/: setup.cfg  setup.py
src/fibonacci_rclpy_action_pkg/fibonacci_rclpy_action_pkg/: fibonacci_action_client.py  fibonacci_action_server.py
src/final_project/: setup.py
src/final_project/final_project/: GetChar.py  control_publisher.py  control_server.py  control_subscriber_client.py
src/final_project/launch/: final_project.launch.py
src/first_rclpy_pkg/: package.xml  setup.cfg  setup.py
src/first_rclpy_pkg/first_rclpy_pkg/: helloworld_publisher.py  helloworld_subscriber.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/sum_rclpy_srvcli_pkg/share/sum_rclpy_srvcli_pkg/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/log/: latest_build
src/my_action_interface/: CMakeLists.txt  package.xml
src/my_interface_example/: CMakeLists.txt  package.xml
src/project_interface/: CMakeLists.txt
src/python_parameters/: package.xml  setup.py
src/python_parameters/launch/: parameter.launch.py
src/python_parameters/python_parameters/: python_parameters_node.py
src/sum_rclpy_srvcli_pkg/: setup.cfg  setup.py
src/sum_rclpy_srvcli_pkg/sum_rclpy_srvcli_pkg/: sum_client.py  sum_service.py
src/test_ros_rclcpp_pkg/: CMakeLists.txt
src/test_ros_rclpy_pkg/: setup.cfg  setup.py
(+278 files in other folders)
